--- a/views/admin/categories.ejs
+++ b/views/admin/categories.ejs
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Categories - CloverShop</title>
     </head>
     <body>
-        <%- include("partials/dashboard_menu.ejs") %>
+        <%- include("../partials/menu.ejs") %>
+        <p>Categories</p>
+        <a href="/admin/categories/new"><button>New Category</button></a>
     </body>
 </html>
