--- a/views/category.ejs
+++ b/views/category.ejs
@@ -11,14 +11,14 @@
         <main>
             <div class="shop-banner-content">
                 <div class="shop-banner-title">
-                    <p>Shop</p>
+                    <p><%= category.name %></p>
                 </div>
                 <div class="shop-banner-description">
-                    <p>Lorem Ipsum</p>
+                    <p><%= category.description %></p>
                 </div>
             </div>
             <div class="shop-content">
-                <div class="shop-settings">
+                <!-- <div class="shop-settings">
                     <div>
                         <p class="category-title">Category</p>
                         <div class="category-line"></div>
@@ -27,7 +27,7 @@
                         <br>
                     </div>
 
-                </div>
+                </div> -->
                 <div class="shop-container">
                     <div class="shop-item">
                         <div class="shop-item-image">
