--- a/public/css/header.css
+++ b/public/css/header.css
@@ -13,6 +13,7 @@ header
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
 .header-content
