--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -8,5 +8,6 @@
     <body>
         <%- include('../partials/menu.ejs') %>
         <p>Products</p>
+        <a href="/admin/products/new"><button>New Product</button></a>
     </body>
 </html>
