--- a/views/category.ejs
+++ b/views/category.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Shop :: CloverShop</title>
+        <title><%= category.name %> - CloverShop</title>
         <link rel="stylesheet" href="/css/shop.css">
     </head>
     <body>
@@ -29,60 +29,22 @@
 
                 </div> -->
                 <div class="shop-container">
-                    <div class="shop-item">
-                        <div class="shop-item-image">
-                        </div>
-                        <div class="shop-item-title">
-                            <p>Shop item</p>
-                        </div>
-                        <div class="shop-item-price">
-                            <p>$0.00</p>
-                        </div>
-                    </div>
-
-                    <div class="shop-item">
-                        <div class="shop-item-image">
-                        </div>
-                        <div class="shop-item-title">
-                            <p>Shop item</p>
-                        </div>
-                        <div class="shop-item-price">
-                            <p>$0.00</p>
-                        </div>
-                    </div>
-
-                    <div class="shop-item">
-                        <div class="shop-item-image">
-                        </div>
-                        <div class="shop-item-title">
-                            <p>Shop item</p>
-                        </div>
-                        <div class="shop-item-price">
-                            <p>$0.00</p>
-                        </div>
-                    </div>
-
-                    <div class="shop-item">
-                        <div class="shop-item-image">
-                        </div>
-                        <div class="shop-item-title">
-                            <p>Shop item</p>
-                        </div>
-                        <div class="shop-item-price">
-                            <p>$0.00</p>
-                        </div>
-                    </div>
-
-                    <div class="shop-item">
-                        <div class="shop-item-image">
-                        </div>
-                        <div class="shop-item-title">
-                            <p>Shop item</p>
-                        </div>
-                        <div class="shop-item-price">
-                            <p>$0.00</p>
-                        </div>
-                    </div>
+                    <% if(products.length > 0) { %>
+                        <% products.forEach((product)=> { %>
+                            <div class="shop-item">
+                                <div class="shop-item-image">
+                                </div>
+                                <div class="shop-item-title">
+                                    <p><%= product.name %></p>
+                                </div>
+                                <div class="shop-item-price">
+                                    <% const productPrice = String(product.price) %>
+                                    <% const formatedPrice = productPrice.substring(0, productPrice.length - 2) + "." + productPrice.substring(productPrice.length - 2) %>
+                                    <p>$<%= formatedPrice %></p>
+                                </div>
+                            </div>
+                        <% }) %>
+                    <% } %>
                 </div>
             </div>
         </main>
