--- a/views/category.ejs
+++ b/views/category.ejs
@@ -33,6 +33,7 @@
                         <% products.forEach((product)=> { %>
                             <div class="shop-item">
                                 <div class="shop-item-image">
+                                    <img width="100%" src="/images/<%= product.picture %>">
                                 </div>
                                 <div class="shop-item-title">
                                     <p><%= product.name %></p>
