--- a/public/css/category.css
+++ b/public/css/category.css
@@ -68,6 +68,23 @@ main
    margin-bottom: .5rem;
 }
 
+.category-submit-button
+{
+    margin-top: 1rem;
+}
+
+.submit-button
+{
+    border: 1px solid #3a3a3a;
+    color: #3a3a3a;
+    background-color: white;
+    width: 90%;
+    padding: 12px 16px;
+    font-size: 13px;
+    text-transform: uppercase;
+    border-radius:4px;
+}
+
 .shop-container
 {
     width: 75%;
