--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,6 +1,7 @@
 <ul>
     <li><a href="/admin/dashboard">Dashboard</a></li>
     <li><a href="/admin/categories">Categories</a></li>
+    <li><a href="/admin/subcategories">Subcategories</a></li>
     <li><a href="/admin/products">Products</a></li>
     <li><a href="/admin/orders">Orders</a></li>
 </ul>
