--- a/views/category.ejs
+++ b/views/category.ejs
@@ -48,7 +48,7 @@
                                     </a>
                                 </div>
                                 <div class="shop-item-title">
-                                    <a href="/category/<%= product.categoryName %>/product/<%= product._id %>">
+                                    <a class="shop-item-link" href="/category/<%= product.categoryName %>/product/<%= product._id %>">
                                         <p><%= product.name %></p>
                                     </a>
                                 </div>
