--- a/public/css/category.css
+++ b/public/css/category.css
@@ -114,6 +114,12 @@ main
     font-weight: 700;
 }
 
+.shop-item-link
+{
+    color: black;
+    text-decoration: none;
+}
+
 .shop-item-price
 {
     width: 250px;
