--- a/public/css/header.css
+++ b/public/css/header.css
@@ -78,6 +78,12 @@ header
     background-color: black;
 }
 
-.login-link {
+.shoping-cart-link 
+{
+    color: black;
+}
+
+.login-link 
+{
     margin-left: .5rem;
 }
