--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
             </ul>
         </div>
         <div class="header-right">
-            <a class="shoping-cart-link">
+            <a class="shoping-cart-link" href="/cart">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true" width="30" height="30"><path stroke-linecap="round" stroke-linejoin="round" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"></path></svg>
             </a>
             <!-- <a class="login-link" href="">
