--- a/views/category.ejs
+++ b/views/category.ejs
@@ -10,11 +10,13 @@
         <%- include("partials/header.ejs") %>
         <main>
             <div class="shop-banner-content">
-                <div class="shop-banner-title">
-                    <p><%= category.name %></p>
-                </div>
-                <div class="shop-banner-description">
-                    <p><%= category.description %></p>
+                <div class="shop-banner-text">
+                    <div class="shop-banner-title">
+                        <p><%= category.name %></p>
+                    </div>
+                    <div class="shop-banner-description">
+                        <p><%= category.description %></p>
+                    </div>
                 </div>
             </div>
             <div class="shop-content">
