--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -29,36 +29,68 @@ main
 
 .cart-product 
 {
-    margin-top: 1rem;
+    margin-top: .25rem;
+    margin-bottom: .25rem;
     display: flex;
 }
 
 .cart-product-image 
 {
-    height: 150px;
+    height: 100px;
 }
 
 .cart-product-information 
 {
     margin-left: 1rem;
-    height: 150px;
+    width: 100%;
+    display: flex;
 }
 
 .cart-product-title
 {
-    margin-top: .75rem;
     font-weight: 700;
-    margin-bottom: .75rem;
+    height: 100%;
+    width: 66%;
+    display: flex;
+    align-items: center;
 }
 
 .cart-product-quantity 
 {
-    margin-bottom: .25rem;
+    height: 100%;
+    width: 33%;
+    display: flex;
+    align-items: center;
 }
 
-.cart-product-remove
+.cart-product-price
 {
-    margin-top: 2rem;
+    height: 100%;
+    width: 33%;
+    display: flex;
+    align-items: center;
+}
+
+.cart-summary
+{
+    margin-top: .5rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.cart-total
+{
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+}
+
+.reset-cart
+{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
 }
 
 .cart-checkout 
@@ -66,4 +98,9 @@ main
     width: 25%;
     height: 100%;
     margin-left: 1rem;
+}
+
+.checkout-header
+{
+    margin-bottom: .5rem;
 }
