--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -45,7 +45,17 @@
                 </div>
                 <div class="cart-checkout">
                     <p class="checkout-header">CHECKOUT</p>
-                    <div class="light-line"></div>
+                    <div class="light-line checkout-header-line"></div>
+                    <div class="cart-checkout-subtotal">
+                        <p class="subtotal-text">Subtotal</p>
+                        <p class="subtotal-amount">$<%= formatedSubtotalPrice %></p>
+                    </div>
+                    <div class="cart-checkout-text">
+                        <p>Taxes and shipping calculated at checkout</p>
+                    </div>
+                    <div class="cart-checkout-button">
+                        <button>Checkout</button>
+                    </div>
                 </div>
             </div>
         </main>
