--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -11,7 +11,7 @@ main
 .cart-content 
 {
     margin-top: 2rem;
-    width: 75%;
+    width: 85%;
     display: flex;
     justify-content: center;
 }
@@ -95,12 +95,101 @@ main
 
 .cart-checkout 
 {
-    width: 25%;
+    width: 15%;
     height: 100%;
-    margin-left: 1rem;
+    margin-left: 2rem;
 }
 
 .checkout-header
 {
     margin-bottom: .5rem;
+}
+
+.cart-checkout-subtotal
+{
+    margin-top: 1rem;
+    width: 100%;
+    display: flex;
+}
+
+.subtotal-text
+{
+    text-transform: uppercase;
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+}
+
+.subtotal-amount
+{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+}
+
+.cart-checkout-text
+{
+    margin-top: 1rem;
+    font-style: italic;
+    display: flex;
+    width: 100%;
+    opacity: 0.5;
+}
+
+.cart-checkout-button
+{
+    margin-top: 1rem;
+}
+
+.cart-checkout-button > button 
+{
+    padding: .75rem 1.5rem;
+    color: #ffff;
+    background-color: #202223;
+    border: none;
+    border-radius: 4px;
+    font-size: large;
+}
+
+.cart-checkout-button > button:hover
+{
+    cursor: pointer;
+    background-color: #008060;
+}
+
+@media screen and (max-width: 690px) {
+    .cart-content
+    {
+        flex-direction: column-reverse;
+        margin-top: .5rem;
+    }
+
+    .cart-items
+    {
+        width: 100%;
+    }
+
+    .cart-checkout
+    {
+        width: 100%;
+        margin-left: 0rem;
+        margin-bottom: 2rem;
+    }
+
+    .checkout-header 
+    {
+        display: none;
+    }
+
+    .checkout-header-line
+    {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .cart-content
+    {
+        width: 95%;
+    }
 }
