--- a/views/product.ejs
+++ b/views/product.ejs
@@ -10,8 +10,10 @@
         <%- include("partials/header.ejs") %>
         <main>
             <div class="product-content">
-                <div class="product-image">
-                    <img src="/images/<%= product.picture %>">
+                <div class="product-picture">
+                    <div class="product-img">
+                        <img width="100%" src="/images/<%= product.picture %>">
+                    </div>
                 </div>
                 <div class="product-information">
                     <div class="product-name">
