--- a/public/css/product.css
+++ b/public/css/product.css
@@ -124,7 +124,15 @@ main
     {
         width: 100%;
         justify-content: center;
+        margin: 0;
         margin-top: 1rem;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .product-content
+    {
+        width: 95%;
     }
 }
 
