--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/cart.css">
     </head>
     <body>
-        <%- include('partials/header.ejs') %>
+        <%- include('partials/Header.ejs') %>
         <main>
             
             <div class="cart-content">
