--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -6,7 +6,7 @@
         <title>Home :: CloverShop</title>
     </head>
     <body>
-        <%- include("partials/header.ejs") %>
+        <%- include("partials/Header.ejs") %>
         <main>
 
         </main>
