--- a/views/category.ejs
+++ b/views/category.ejs
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/category.css">
     </head>
     <body>
-        <%- include("partials/header.ejs") %>
+        <%- include("partials/Header.ejs") %>
         <main>
             <div class="shop-banner-content">
                 <div class="shop-banner-text">
