--- a/views/product.ejs
+++ b/views/product.ejs
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/product.css">
     </head>
     <body>
-        <%- include("partials/header.ejs") %>
+        <%- include("partials/Header.ejs") %>
         <main>
             <div class="product-content">
                 <div class="product-picture">
