--- a/views/category.ejs
+++ b/views/category.ejs
@@ -46,7 +46,7 @@
                             <div class="shop-item">
                                 <div class="shop-item-image">
                                     <a href="/category/<%= product.categoryName %>/product/<%= product._id %>">
-                                        <img width="100%" src="/images/<%= product.picture %>">
+                                        <img width="100%" src="/uploads/<%= product.picture %>">
                                     </a>
                                 </div>
                                 <div class="shop-item-title">
