--- a/views/product.ejs
+++ b/views/product.ejs
@@ -12,7 +12,7 @@
             <div class="product-content">
                 <div class="product-picture">
                     <div class="product-img">
-                        <img width="100%" src="/images/<%= product.picture %>">
+                        <img width="100%" src="/uploads/<%= product.picture %>">
                     </div>
                 </div>
                 <div class="product-information">
